Fixed blurry ult orbs

--- a/css/style.css
+++ b/css/style.css
@@ -116,7 +116,6 @@ h1, h5, .card-title, button, #title {
     width: 50px;
     height: 50px;
     border-radius: 50%;
-    border: 1px solid;
     background-color: #000000;
     opacity: 0.3;
     display: inline-block;
